@@ -13,6 +13,8 @@ $_lang['author'] = 'Author';
 $_lang['autoincludes_packaging'] = 'Packaging in autoincludes: [[+autoincludes]]';
 $_lang['back_txt'] = 'Back';
 $_lang['by'] = 'by';
+$_lang['changelog'] = 'Changelog';
+$_lang['changelog_desc'] = 'Please review the changelog for this version.';
 $_lang['core_err_invalid'] = 'You must have a valid core installation with an active workspace to run the build.';
 $_lang['description'] = 'Description';
 $_lang['details'] = 'Details';
